# RakshakAI

./: .gitignore  .rakshakaignore  CHANGELOG.md  CONTRIBUTING.md  JUDGE_QA.md  PHASE2.md  PROJECT_REPORT.md  QUANTUM_EDITION.md  README.md  RESEARCH_PAPER.md  cli.js  create_dataset.py  demo_vulnerable.py  generate_aatman_dataset.py  generate_elite_dataset.py  generate_final_dataset.py  generate_mega_dataset.py  hackathon.sh  package-lock.json  package.json  paper.tex  preprocess.py  pyproject.toml  rakshak_cli.py  rakshak_model.py  requirements.txt  run_training.sh  scanner.js  scraper.py  server.js  server.py  setup.py  start_training.sh  train.py  train_lightweight.py  training_config.json  training_plan.py
benchmarks/: real_world_benchmark.py
colabs/: RakshakAI_demo.ipynb
dataset/: metadata.json  train_raw.csv
docs/: BENCHMARK_GUIDE.md  DATASET_AUDIT.md  DATASET_EXPANSION_REPORT.md  DATASET_SOURCES.md  DATASET_STATS.md  DEPLOYMENT_ROADMAP.md  GITHUB_ACTION_PLAN.md  GITHUB_AUDIT.md  LEADERBOARD.md  OPEN_SOURCE_AUDIT.md  OPEN_SOURCE_LAUNCH.md  PHASE2_REPORT.md  RAKSHAKAI_V2.md  RAKSHAKAI_VISION.md  READY_TO_PUSH.md  RELEASE_CHECKLIST.md  REPOSITORY_STRUCTURE.md  SMOKE_TEST.md  TRAINING_READY.md  TRAIN_NOW.md  V2_RELEASE_PLAN.md  VSCODE_EXTENSION_PLAN.md
examples/: api_client.py  scan_file.py
presentation/: package-lock.json  package.json  slides.md
public/: index.html
rakshakai/: __init__.py  data.py  inference.py  tokenizer.py  train.py
scripts/: postinstall.js
v2/: BEAT_BIG_MODELS.md  CHANGES_SUMMARY.txt  FINAL_PRE_LAUNCH_REPORT.md  PRE_LAUNCH_CHECKLIST.md  QUICKSTART_FIXED.md  TRAINING_FIX_SUMMARY.md  TRAINING_ISSUES_FIXED.md  TRAIN_V3.md  __init__.py  modal_infer.py  modal_mythos_train.py  modal_train.py  modal_train_h100.py  modal_upload.py  modal_v3_train.py  requirements-v2.txt
v2/benchmarks/: BENCHMARK_LOCK.json  build_comprehensive_benchmark.py  chart_model_comparison.py  comprehensive_benchmark.jsonl  modal_serve.py  public_benchmark.py  run_benchmark_via_api.py  run_groq_benchmark.py  run_real_benchmark.py  security_benchmark.jsonl
v2/cli/: agent.py  agentic_tools.py  auth.py  ci.py  code_index.py  curate_data.py  cwe_cache.py  display.py  git_scanner.py  llm.py  lsp_client.py  main.py  mcp_server.py  memory.py  orchestrator.py  permissions.py  project_context.py  prompts.py  runner.py  scanner.py  session_share.py  skills.py  test_runner.py  test_scanner.py  thinking.py  tools.py  upload_dataset.py  watcher.py
v2/cli/archive/: rkscan.py  tui.py
v2/configs/: ablation_14b.yaml  b200_fullft.yaml  b200_qlora.yaml  language_balance.json  lightning_14b_dpo.yaml  lightning_14b_dpo_PRODUCTION.yaml  lightning_14b_dpo_v2_FIXED.yaml  lightning_14b_sft.yaml  lightning_14b_sft_PRODUCTION.yaml  lightning_14b_sft_v2_FIXED.yaml  lightning_14b_sft_v2_REASONING.yaml  lightning_500k_dpo.yaml  lightning_500k_sft.yaml  lightning_dpo.yaml  lightning_fast.yaml  lightning_rakshak.yaml  modal_14b_sft_t4.yaml  phase_a_sft.yaml  phase_b_sft.yaml  phase_b_sft_optimized.yaml  phase_c_sft.yaml  phase_d_dpo.yaml
v2/dataset/: __init__.py  add_nonvuln_explanations.py  audit.py  balance.py  build_final.py  build_hard_benchmark.py  build_humansec.py  build_locked_benchmark.py  build_phase_b.py  build_securityeval.py  clean.py  cleaning_report.json  cwe_normalize.py  dedup.py  download.py  exploit_templates.json  extract_nonvuln.py  extract_osv_commits.py  hard_negatives_expanded.py  import_exploitdb.py  import_extra_datasets.py  mine_hard_negatives.py  orchestrate.py  pack.py  patch_gen.py  regen_axolotl.py  schema.py  synthesize_vulns.py  to_instruct.py  to_pack_format.py  upload_v2.py  utils.py  validate.py
v2/dataset/adapters/: augment.py  from_v1_csv.py  seed_tier_b.py
v2/dataset/importers/: __init__.py  common.py  convert_ayshajavd.py  convert_bigvul.py  convert_crossvul.py  convert_cvefixes.py  convert_datadog.py  convert_devign.py  convert_github_advisories.py  convert_hitoshura25_crossvul.py  convert_morefixes.py  convert_primevul.py  convert_purplellama.py  convert_securecode_aiml.py  convert_securecode_web.py  convert_securityeval.py  convert_securityeval2.py  download_cvefixes_smart.py  extract_advisory_code.py  github_advisories.py  mine_npm_vulns.py  mine_pypi_vulns.py  osv.py  (+3 more)
v2/deploy/: Modelfile.rakshakai-v2  __init__.py  cli.json  cli.py  server.py
v2/docs/: COST.md  DEPLOYMENT.md  HYPERPARAMETERS.md  QUICKSTART.md
v2/integrations/: __init__.py
v2/release/: HUGGINGFACE_MODEL_CARD.md
v2/rocm/: Dockerfile  SETUP.md  __init__.py  env.sh  smoke_test.py
v2/scripts/: __init__.py  _remote_run.sh  _remote_run_14b.sh  _remote_run_14b_FIXED.sh  benchmark_vs_big_models.py  build_dpo_pairs.py  clean_validation_data.py  continue.py  continue_training.py  cost_estimate.py  evaluate.py  evaluate.sh  evaluate_phase_a.py  evaluate_phase_b.py  export_gguf.py  install_dependencies.sh  launch_b200.sh  launch_phase_b.sh  launch_phase_b_optimized.sh  lightning_shot.sh  merge_lora.py  modal_train.py  package_phase_b.sh  pre_training_audit.py  predict_one.py  preflight_check.py  preprocess_dpo.py  quantize_awq.py  radeon_resume_final.py  radeon_run.py  train_all.sh  train_dpo.py  train_phase.sh  train_production.sh  train_sft.py
(+14 files in other folders)
