[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rakshakai"
version = "0.2.0"
description = "Lightweight ML model for code vulnerability detection — India's First Security AI"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "RakshakAI", email = "rakshakai@users.noreply.github.com"},
]
keywords = ["security", "vulnerability-detection", "code-scanning", "ml", "lightweight"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/Muneerali199/RakshakAI"
Documentation = "https://github.com/Muneerali199/RakshakAI#readme"
Source = "https://github.com/Muneerali199/RakshakAI"

[tool.setuptools.packages.find]
include = ["rakshakai*"]
